manifests/oracle-lb.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: oracle-lb
  labels:
    app: oracle-lb
  namespace: default
subsets:
  - addresses:
    - ip: 172.16.0.0
    ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-lb
  labels:
    app: oracle-lb
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
