manifests/exportarr.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: exportarr-radarr
spec:
    podSelector:
        matchLabels:
            app.kubernetes.io/name: radarr-exporter
            app.kubernetes.io/instance: radarr-exporter
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
              - namespaceSelector: {}
                podSelector:
                    matchLabels:
                        app.kubernetes.io/name: victoria-metrics-single
          ports:
              - port: 9707
    egress:
        - to:
              - podSelector:
                    matchLabels:
                        app.kubernetes.io/name: radarr
          ports:
              - port: 7878
        - ports:
              - port: 8200
                protocol: TCP
          to:
              - podSelector:
                    matchLabels:
                        app.kubernetes.io/name: vault
        - to:
              - namespaceSelector: {}
                podSelector:
                    matchLabels:
                        k8s-app: kube-dns
          ports:
              - port: 53
                protocol: UDP
