manifests/influx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: influxdb
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: influxdb2
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - port: 8086
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: grafana
      ports:
        - port: 8086
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
