manifests/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: redis
    name: redis
    namespace: default
spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: redis
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: redis
        spec:
            automountServiceAccountToken: true
            containers:
                - command:
                      - redis-server
                      - --appendonly
                      - "yes"
                  image: redis:7-alpine@sha256:f23b1e963e2122ce4de6c40ffd105b60ccfa62bf0134585d3109f5caf691b5b3
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      failureThreshold: 3
                      initialDelaySeconds: 5
                      periodSeconds: 10
                      successThreshold: 1
                      tcpSocket:
                          port: 6379
                      timeoutSeconds: 1
                  name: redis
                  ports:
                      - containerPort: 6379
                        name: redis
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      initialDelaySeconds: 5
                      periodSeconds: 10
                      successThreshold: 1
                      tcpSocket:
                          port: 6379
                      timeoutSeconds: 1
                  resources:
                      limits:
                          cpu: "4"
                          memory: 512Mi
                      requests:
                          cpu: 100m
                          memory: 128Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      privileged: false
                      readOnlyRootFilesystem: true
                      runAsGroup: 997
                      runAsNonRoot: true
                      runAsUser: 998
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  volumeMounts:
                      - mountPath: /data
                        mountPropagation: None
                        name: data
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            nodeSelector:
                kubernetes.io/hostname: virtworkerone
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 30
            volumes:
                - name: data
                  hostPath:
                      path: /var/mnt/cache/configs/redis
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    labels:
        app: redis
    name: redis
    namespace: default
spec:
    egress: []
    ingress:
        - from:
              - podSelector:
                    matchExpressions:
                        - key: app
                          operator: In
                          values:
                              - renovate
              - podSelector:
                    matchExpressions:
                        - key: app.kubernetes.io/name
                          operator: In
                          values:
                              - paperless
    podSelector:
        matchLabels:
            app: redis
    policyTypes:
        - Ingress
        - Egress
